--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+
+#user
+GCC 8.3 CPP Manual.pdf
+GCC 8.3 Manual.pdf
+GCC 8.3 Standard C++ Library Manual .pdf
+GCC 8.3 Standard C++ Library Reference Manual.pdf
+GCC_4_7_0
