--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ GCC 8.3 Manual.pdf
 GCC 8.3 Standard C++ Library Manual .pdf
 GCC 8.3 Standard C++ Library Reference Manual.pdf
 GCC_4_7_0
+.vscode
